--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     content="Wei-Hao Chen, a fourth-year Ph.D. student in Computer Science at Purdue University, focuses on Human-AI Interaction, Software Engineering, and Artificial Intelligence in the Human-Centered Software Systems Lab. With experience at Realtek Semiconductor and a background in Cryptography, he develops tools for data science. Enjoys travel, gaming, and cats.">
   <meta name="keywords" content="Wei-Hao Chen, Purdue University, Computer Science, Human-AI Interaction, Software Engineering, Artificial Intelligence, Realtek Semiconductor, Cryptography, Data Science, Programming by Demonstration, LLM, Artificial Intelligence, MIWA, Web Automation, Data Collection, Jupyter Notebook, Programming Behavior">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&family=Source+Serif+Pro:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 
 
   <link rel="stylesheet" href="style.css" />
@@ -22,13 +22,13 @@
 
 </head>
 
-<body class="text-slate-600 bg-white text-base leading-relaxed font-['Helvetica']">
+<body class="text-slate-600 bg-white text-base leading-relaxed font-['Lato'] font-light">
   <!-- Navigation Bar (new) -->
   <nav class="border-b border-gray-200 bg-white sticky top-0 z-50">
     <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between h-16">
         <div class="flex-shrink-0 flex items-center">
-          <a href="#" class="text-xl font-semibold"><strong>Wei-Hao</strong> Chen</a>
+          <a href="#" class="text-xl font-normal"><strong>Wei-Hao</strong> Chen</a>
         </div>
         <!-- Mobile menu button -->
         <div class="flex items-center md:hidden">
@@ -62,15 +62,18 @@
           <img src="pic.jpg" alt="Wei-Hao Chen" class="rounded-lg w-full shadow-md" />
           <div class="mt-4 space-y-2">
             <a href="mailto:chen4129@purdue.edu" class="flex items-center text-sm hover:text-sky-600">
-              <i class="fa-solid fa-envelope w-5"></i><span>Email</span>
+              <i class="fa-solid fa-envelope w-5 text-yellow-500"></i><span>chen4129@purdue.edu</span>
+            </a>
+            <a href="https://twitter.com/_weihao_chen_" class="flex items-center text-sm hover:text-sky-600">
+              <i class="fa-brands fa-twitter w-5 text-blue-400"></i><span>@_weihao_chen_</span>
             </a>
             <a href="https://app.box.com/s/lw4aee3sjywyj61tve18fffj311ln44a" class="flex items-center text-sm hover:text-sky-600">
-              <i class="fa-solid fa-file w-5"></i><span>CV</span>
+              <i class="fa-solid fa-file-lines w-5 text-gray-500"></i><span>CV</span>
             </a>
           </div>
         </div>
         <div class="md:col-span-3">
-          <h1 class="text-3xl font-semibold mb-4">about</h1>
+          <h1 class="text-3xl font-semibold mb-4">About</h1>
           <p class="text-gray-700 leading-relaxed">
             Hello, my name is <span class="name-underline">Wei-Hao Chen</span>. I am a fourth-year Ph.D. student in the Department of Computer Science at Purdue
             University and a member of the Human-Centered Software Systems Lab under the guidance of Professor <a href="https://tianyi-zhang.github.io/" class="text-blue-500 hover:text-blue-700">Tianyi Zhang</a>. My
@@ -91,12 +94,12 @@
 
     <!-- Publications Section -->
     <section id="publication" class="mb-12">
-      <h1 class="text-3xl font-semibold mb-6">publications</h1>
-      <div class="space-y-8">
+      <h1 class="text-3xl font-semibold mb-6">Publications</h1>
+      <div class="space-y-4">
         <div class="publication">
           <div class="grid grid-cols-1">
             <div>
-              <h3 class="text-lg font-semibold mb-1">Dango: A Mixed-Initiative Data Wrangling System using Large Language Model</h3>
+              <h3 class="text-lg font-normal mb-1">Dango: A Mixed-Initiative Data Wrangling System using Large Language Model</h3>
               <p class="text-sm mb-2"><strong>Wei-Hao Chen</strong>, Weixi Tong, Amanda Case, Tianyi Zhang.</p>
               <p class="text-sm italic mb-2">ACM Conference on Human Factors in Computing Systems (CHI), 2025</p>
               <div class="flex space-x-4">
@@ -111,7 +114,7 @@
         <div class="publication">
           <div class="grid grid-cols-1">
             <div>
-              <h3 class="text-lg font-semibold mb-1">MIWA: Mixed-Initiative Web Automation for Better User Control and Confidence</h3>
+              <h3 class="text-lg font-normal mb-1">MIWA: Mixed-Initiative Web Automation for Better User Control and Confidence</h3>
               <p class="text-sm mb-2"><strong>Wei-Hao Chen</strong>, Xiaoyu Liu, Jiacheng Zhang, Ian Iong Lam, Zhicheng Huang, Rui Dong, Xinyu Wang, Tianyi Zhang</p>
               <p class="text-sm italic mb-2">ACM Symposium on User Interface Software and Technology (UIST), 2023</p>
               <div class="flex space-x-4">
@@ -128,7 +131,7 @@
         <div class="publication">
           <div class="grid grid-cols-1">
             <div>
-              <h3 class="text-lg font-semibold mb-1">CCA-Secure Key-Aggregate Proxy Re-Encryption for Secure Cloud Storage</h3>
+              <h3 class="text-lg font-normal mb-1">CCA-Secure Key-Aggregate Proxy Re-Encryption for Secure Cloud Storage</h3>
               <p class="text-sm mb-2"><strong>Wei-Hao Chen</strong>, Chun-I Fan, Yi-Fan Tseng</p>
               <p class="text-sm italic mb-2">arXiv preprint arXiv:2410.08120</p>
               <div class="flex space-x-4">
@@ -142,7 +145,7 @@
         <div class="publication">
           <div class="grid grid-cols-1">
             <div>
-              <h3 class="text-lg font-semibold mb-1">Media playback apparatus and method having audio channel automatic selection mechanism</h3>
+              <h3 class="text-lg font-normal mb-1">Media playback apparatus and method having audio channel automatic selection mechanism</h3>
               <p class="text-sm mb-2"><strong>Wei-Hao Chen</strong></p>
               <p class="text-sm italic mb-2">US Patent US-20220174348-A1</p>
             </div>
@@ -151,7 +154,7 @@
         <div class="publication">
           <div class="grid grid-cols-1">
             <div>
-              <h3 class="text-lg font-semibold mb-1">Efficient Key-Aggregate Proxy Re-Encryption for Secure Data Sharing in Clouds</h3>
+              <h3 class="text-lg font-normal mb-1">Efficient Key-Aggregate Proxy Re-Encryption for Secure Data Sharing in Clouds</h3>
               <p class="text-sm mb-2"><strong>Wei-Hao Chen</strong>, Chun-I Fan, Yi-Fan Tseng</p>
               <p class="text-sm italic mb-2">IEEE Conference on Dependable and Secure Computing (DSC), 2018</p>
               <div class="flex space-x-4">
@@ -167,7 +170,7 @@
 
     <!-- News Section -->
     <section id="news">
-      <h1 class="text-3xl font-semibold mb-6">news</h1>
+      <h1 class="text-3xl font-semibold mb-6">News</h1>
       <div class="space-y-4">
         
         <div class="flex items-start space-x-4">
