--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <i class="fa-brands fa-twitter w-5 text-blue-400"></i><span>@_weihao_chen_</span>
             </a>
             <a href="https://app.box.com/s/lw4aee3sjywyj61tve18fffj311ln44a" class="flex items-center text-sm hover:text-sky-600">
-              <i class="fa-solid fa-file-lines w-5 text-gray-500"></i><span>CV</span>
+              <i class="fa-solid fa-file-lines w-5 text-gray-500"></i><span>Curriculum Vitae</span>
             </a>
           </div>
         </div>
