--- a/index.html
+++ b/index.html
@@ -84,10 +84,7 @@
             <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Artificial Intelligence</span>, and 
             <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Programming-by-Demonstration</span>.
             
-            Prior to my Ph.D. studies at Purdue, I worked as a software engineer at Realtek Semiconductor Corp in Taiwan. My
-            previous research was centered around Cryptography.
-            In my free time, I enjoy traveling, playing video games 🎮, and I love cats 😺.
-          </p>
+            I am interested in the intersection of HCI and AI, and I have extensive UI/UX and human-centered design experience in creating tools to help data scientists. Cat Person 🐈.          </p>
         </div>
       </div>
     </section>
@@ -171,8 +168,7 @@
     <!-- News Section -->
     <section id="news">
       <h1 class="text-3xl font-semibold mb-6">News</h1>
-      <div class="space-y-4">
-        
+      <div class="space-y-2">
         <div class="flex items-start space-x-4">
           <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">Jan 2025</div>
           <div class="flex-1">My paper - Dango: A Mixed-Initiative Data Wrangling System using Large Language Model is accepted by CHI 2025 🎉.</div>
