--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body class="text-slate-600 bg-white text-base leading-relaxed font-['Lato'] font-light">
   <!-- Navigation Bar (new) -->
   <nav class="border-b border-gray-200 bg-white sticky top-0 z-50">
-    <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between h-16">
         <div class="flex-shrink-0 flex items-center">
           <a href="#" class="text-xl font-normal"><strong>Wei-Hao</strong> Chen</a>
@@ -54,10 +54,25 @@
     </div>
   </nav>
 
-  <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+  <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
     <!-- About Section -->
     <section id="about" class="mb-12">
       <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+
+        <div class="md:col-span-3">
+          <h1 class="text-4xl font-semibold mb-4">About 👋</h1>
+          <p class="text-gray-700 leading-relaxed">
+            Hello, my name is <span class="name-underline">Wei-Hao Chen</span>. I am a fourth-year Ph.D. student in the Department of Computer Science at Purdue
+            University and a member of the Human-Centered Software Systems Lab under the guidance of Professor <a href="https://tianyi-zhang.github.io/" class="text-blue-500 hover:text-blue-700">Tianyi Zhang</a>. My
+            research primarily focuses on <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Human Computer Interaction (HCI)</span>, <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Software Engineering</span>, and <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">
+              Artificial Intelligence</span>. I am currently developing tools to help data scientists using several techniques 
+              such as 
+              <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">LLM</span>,
+            <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Artificial Intelligence</span>, and 
+            <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Programming-by-Demonstration</span>.
+            
+            I have extensive UI/UX and human-centered design experience in creating tools with AI.         </p>
+        </div>
         <div class="md:col-span-1">
           <img src="pic.jpg" alt="Wei-Hao Chen" class="rounded-lg w-full shadow-md" />
           <div class="mt-4 space-y-2">
@@ -72,26 +87,12 @@
             </a>
           </div>
         </div>
-        <div class="md:col-span-3">
-          <h1 class="text-3xl font-semibold mb-4">About</h1>
-          <p class="text-gray-700 leading-relaxed">
-            Hello, my name is <span class="name-underline">Wei-Hao Chen</span>. I am a fourth-year Ph.D. student in the Department of Computer Science at Purdue
-            University and a member of the Human-Centered Software Systems Lab under the guidance of Professor <a href="https://tianyi-zhang.github.io/" class="text-blue-500 hover:text-blue-700">Tianyi Zhang</a>. My
-            research primarily focuses on <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Human Computer Interaction (HCI)</span>, <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Software Engineering</span>, and <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">
-              Artificial Intelligence</span>. I am currently developing tools to help data scientists using several techniques 
-              such as 
-              <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">LLM</span>,
-            <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Artificial Intelligence</span>, and 
-            <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Programming-by-Demonstration</span>.
-            
-            I am interested in the intersection of HCI and AI, and I have extensive UI/UX and human-centered design experience in creating tools to help data scientists. Cat Person 🐈.          </p>
-        </div>
       </div>
     </section>
 
     <!-- Publications Section -->
     <section id="publication" class="mb-12">
-      <h1 class="text-3xl font-semibold mb-6">Publications</h1>
+      <h1 class="text-4xl font-semibold mb-6">Publications 📚</h1>
       <div class="space-y-4">
         <div class="publication">
           <div class="grid grid-cols-1">
@@ -167,7 +168,7 @@
 
     <!-- News Section -->
     <section id="news">
-      <h1 class="text-3xl font-semibold mb-6">News</h1>
+      <h1 class="text-4xl font-semibold mb-6">News 📰</h1>
       <div class="space-y-2">
         <div class="flex items-start space-x-4">
           <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">Jan 2025</div>
@@ -208,13 +209,7 @@
   </div>
 
   <!-- Footer -->
-  <footer class="border-t border-gray-200 mt-12">
-    <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 py-4">
-      <div class="text-center text-sm text-gray-500">
-        &copy; 2024 Wei-Hao Chen | Last updated: 2025-01-19
-      </div>
-    </div>
-  </footer>
+
 
   <!-- Add this script before closing body tag -->
   <script>
