--- a/index.html
+++ b/index.html
@@ -169,40 +169,40 @@
     <!-- News Section -->
     <section id="news">
       <h1 class="text-4xl font-semibold mb-6">News 📰</h1>
-      <div class="space-y-2">
-        <div class="flex items-start space-x-4">
+      <div class="space-y-4">
+        <div class="flex items-start">
           <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">Jan 2025</div>
-          <div class="flex-1">My paper - Dango: A Mixed-Initiative Data Wrangling System using Large Language Model is accepted by CHI 2025 🎉.</div>
+          <div class="flex-1 text-sm">My paper - Dango: A Mixed-Initiative Data Wrangling System using Large Language Model is accepted by CHI 2025 🎉.</div>
         </div>
-        <div class="flex items-start space-x-4">
+        <div class="flex items-start">
           <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">Mar 2024</div>
-          <div class="flex-1">I have been selected as the recipient of a Summer Research Grant (5,000 USD). Thanks to the Purdue Computer Science Department! 🎉</div>
+          <div class="flex-1 text-sm">I have been selected as the recipient of a Summer Research Grant (5,000 USD). Thanks to the Purdue Computer Science Department! 🎉</div>
         </div>
-        <div class="flex items-start space-x-4">
+        <div class="flex items-start">
           <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">Sep 2023</div>
-          <div class="flex-1">I am Graduate TA for CS 240: Programming in C at Purdue University.</div>
+          <div class="flex-1 text-sm">I am Graduate TA for CS 240: Programming in C at Purdue University.</div>
         </div>
-        <div class="flex items-start space-x-4">
+        <div class="flex items-start">
           <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">Jul 2023</div>
-          <div class="flex-1">Our paper - MIWA: Mixed-Initiative Web Automation for Better User Control and Confidence is accepted by
+          <div class="flex-1 text-sm">Our paper - MIWA: Mixed-Initiative Web Automation for Better User Control and Confidence is accepted by
             UIST
             2023 🎉.</div>
         </div>
-        <div class="flex items-start space-x-4">
+        <div class="flex items-start">
           <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">May 2022</div>
-          <div class="flex-1">I start my internship at Intel Corporation!</div>
+          <div class="flex-1 text-sm">I start my internship at Intel Corporation!</div>
         </div>
-        <div class="flex items-start space-x-4">
+        <div class="flex items-start">
           <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">Jan 2022</div>
-          <div class="flex-1">I am Graduate TA for CS 180: Problem Solving And Object-Oriented Programming.</div>
+          <div class="flex-1 text-sm">I am Graduate TA for CS 180: Problem Solving And Object-Oriented Programming.</div>
         </div>
-        <div class="flex items-start space-x-4">
+        <div class="flex items-start">
           <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">Sep 2021</div>
-          <div class="flex-1">I am Graduate TA for CS 240: Programming in C at Purdue University.</div>
+          <div class="flex-1 text-sm">I am Graduate TA for CS 240: Programming in C at Purdue University.</div>
         </div>
-        <div class="flex items-start space-x-4">
+        <div class="flex items-start">
           <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">Sep 2021</div>
-          <div class="flex-1">I join Purdue University 🚂 as an PhD student in Computer Science.</div>
+          <div class="flex-1 text-sm">I join Purdue University 🚂 as an PhD student in Computer Science.</div>
         </div>
       </div>
     </section>
