--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <meta http-equiv="pragma" content="no-cache" />
   <meta name="description"
     content="Wei-Hao Chen, a fourth-year Ph.D. student in Computer Science at Purdue University, focuses on Human-AI Interaction, Software Engineering, and Artificial Intelligence in the Human-Centered Software Systems Lab. With experience at Realtek Semiconductor and a background in Cryptography, he develops tools for data science. Enjoys travel, gaming, and cats.">
-  <meta name="keywords" content="Wei-Hao Chen, Purdue University, Computer Science, Human-AI Interaction, Software Engineering, Artificial Intelligence, Realtek Semiconductor, Cryptography, Data Science, Programming by Demonstration, LLM, Artificial Intelligence, MIWA, Web Automation, Data Collection, Jupyter Notebook, Programming Behavior">
+  <meta name="keywords"
+    content="Wei-Hao Chen, Purdue University, Computer Science, Human-AI Interaction, Software Engineering, Artificial Intelligence, Realtek Semiconductor, Cryptography, Data Science, Programming by Demonstration, LLM, Artificial Intelligence, MIWA, Web Automation, Data Collection, Jupyter Notebook, Programming Behavior">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 
@@ -32,7 +33,8 @@
         </div>
         <!-- Mobile menu button -->
         <div class="flex items-center md:hidden">
-          <button type="button" onclick="toggleMenu()" class="inline-flex items-center justify-center p-2 rounded-md text-slate-600 hover:text-slate-800 hover:bg-gray-100">
+          <button type="button" onclick="toggleMenu()"
+            class="inline-flex items-center justify-center p-2 rounded-md text-slate-600 hover:text-slate-800 hover:bg-gray-100">
             <i class="fa-solid fa-bars text-xl"></i>
           </button>
         </div>
@@ -62,16 +64,22 @@
         <div class="md:col-span-3">
           <h1 class="text-4xl font-semibold mb-4">About 👋</h1>
           <p class="text-gray-700 leading-relaxed">
-            Hello, my name is <span class="name-underline">Wei-Hao Chen</span>. I am a fourth-year Ph.D. student in the Department of Computer Science at Purdue
-            University and a member of the Human-Centered Software Systems Lab under the guidance of Professor <a href="https://tianyi-zhang.github.io/" class="text-blue-500 hover:text-blue-700">Tianyi Zhang</a>. My
-            research primarily focuses on <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Human Computer Interaction (HCI)</span>, <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Software Engineering</span>, and <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">
-              Artificial Intelligence</span>. I am currently developing tools to help data scientists using several techniques 
-              such as 
-              <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">LLM</span>,
-            <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Artificial Intelligence</span>, and 
+            Hello, my name is <span class="name-underline">Wei-Hao Chen</span>. I am a fourth-year Ph.D. student in the
+            Department of Computer Science at Purdue
+            University and a member of the Human-Centered Software Systems Lab under the guidance of Professor <a
+              href="https://tianyi-zhang.github.io/" class="text-blue-500 hover:text-blue-700">Tianyi Zhang</a>. My
+            research primarily focuses on <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Human
+              Computer Interaction (HCI)</span>, <span
+              class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Software Engineering</span>, and <span
+              class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">
+              Data Science</span>. I am currently developing tools to help data scientists using several techniques
+            such as
+            <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">LLM</span>,
+            <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Artificial Intelligence</span>, and
             <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Programming-by-Demonstration</span>.
-            
-            I have extensive UI/UX and human-centered design experience in creating tools with AI.         </p>
+
+            I have extensive UI/UX and human-centered design experience in creating tools with AI.
+          </p>
         </div>
         <div class="md:col-span-1">
           <img src="pic.jpg" alt="Wei-Hao Chen" class="rounded-lg w-full shadow-md" />
@@ -82,7 +90,8 @@
             <a href="https://twitter.com/_weihao_chen_" class="flex items-center text-sm hover:text-sky-600">
               <i class="fa-brands fa-twitter w-5 text-blue-400"></i><span>@_weihao_chen_</span>
             </a>
-            <a href="https://app.box.com/s/lw4aee3sjywyj61tve18fffj311ln44a" class="flex items-center text-sm hover:text-sky-600">
+            <a href="https://app.box.com/s/lw4aee3sjywyj61tve18fffj311ln44a"
+              class="flex items-center text-sm hover:text-sky-600">
               <i class="fa-solid fa-file-lines w-5 text-gray-500"></i><span>Curriculum Vitae</span>
             </a>
           </div>
@@ -97,7 +106,8 @@
         <div class="publication">
           <div class="grid grid-cols-1">
             <div>
-              <h3 class="text-lg font-normal mb-1">Dango: A Mixed-Initiative Data Wrangling System using Large Language Model</h3>
+              <h3 class="text-lg font-normal mb-1">Dango: A Mixed-Initiative Data Wrangling System using Large Language
+                Model</h3>
               <p class="text-sm mb-2"><strong>Wei-Hao Chen</strong>, Weixi Tong, Amanda Case, Tianyi Zhang.</p>
               <p class="text-sm italic mb-2">ACM Conference on Human Factors in Computing Systems (CHI), 2025</p>
               <div class="flex space-x-4">
@@ -112,8 +122,10 @@
         <div class="publication">
           <div class="grid grid-cols-1">
             <div>
-              <h3 class="text-lg font-normal mb-1">MIWA: Mixed-Initiative Web Automation for Better User Control and Confidence</h3>
-              <p class="text-sm mb-2"><strong>Wei-Hao Chen</strong>, Xiaoyu Liu, Jiacheng Zhang, Ian Iong Lam, Zhicheng Huang, Rui Dong, Xinyu Wang, Tianyi Zhang</p>
+              <h3 class="text-lg font-normal mb-1">MIWA: Mixed-Initiative Web Automation for Better User Control and
+                Confidence</h3>
+              <p class="text-sm mb-2"><strong>Wei-Hao Chen</strong>, Xiaoyu Liu, Jiacheng Zhang, Ian Iong Lam, Zhicheng
+                Huang, Rui Dong, Xinyu Wang, Tianyi Zhang</p>
               <p class="text-sm italic mb-2">ACM Symposium on User Interface Software and Technology (UIST), 2023</p>
               <div class="flex space-x-4">
                 <a href="MIWA.pdf" class="text-sm text-sky-600 hover:text-sky-800">
@@ -129,7 +141,8 @@
         <div class="publication">
           <div class="grid grid-cols-1">
             <div>
-              <h3 class="text-lg font-normal mb-1">CCA-Secure Key-Aggregate Proxy Re-Encryption for Secure Cloud Storage</h3>
+              <h3 class="text-lg font-normal mb-1">CCA-Secure Key-Aggregate Proxy Re-Encryption for Secure Cloud Storage
+              </h3>
               <p class="text-sm mb-2"><strong>Wei-Hao Chen</strong>, Chun-I Fan, Yi-Fan Tseng</p>
               <p class="text-sm italic mb-2">arXiv preprint arXiv:2410.08120</p>
               <div class="flex space-x-4">
@@ -143,7 +156,8 @@
         <div class="publication">
           <div class="grid grid-cols-1">
             <div>
-              <h3 class="text-lg font-normal mb-1">Media playback apparatus and method having audio channel automatic selection mechanism</h3>
+              <h3 class="text-lg font-normal mb-1">Media playback apparatus and method having audio channel automatic
+                selection mechanism</h3>
               <p class="text-sm mb-2"><strong>Wei-Hao Chen</strong></p>
               <p class="text-sm italic mb-2">US Patent US-20220174348-A1</p>
             </div>
@@ -152,7 +166,8 @@
         <div class="publication">
           <div class="grid grid-cols-1">
             <div>
-              <h3 class="text-lg font-normal mb-1">Efficient Key-Aggregate Proxy Re-Encryption for Secure Data Sharing in Clouds</h3>
+              <h3 class="text-lg font-normal mb-1">Efficient Key-Aggregate Proxy Re-Encryption for Secure Data Sharing
+                in Clouds</h3>
               <p class="text-sm mb-2"><strong>Wei-Hao Chen</strong>, Chun-I Fan, Yi-Fan Tseng</p>
               <p class="text-sm italic mb-2">IEEE Conference on Dependable and Secure Computing (DSC), 2018</p>
               <div class="flex space-x-4">
@@ -172,11 +187,13 @@
       <div class="space-y-4">
         <div class="flex items-start">
           <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">Jan 2025</div>
-          <div class="flex-1 text-sm">My paper - Dango: A Mixed-Initiative Data Wrangling System using Large Language Model is accepted by CHI 2025 🎉.</div>
+          <div class="flex-1 text-sm">My paper - Dango: A Mixed-Initiative Data Wrangling System using Large Language
+            Model is accepted by CHI 2025 🎉.</div>
         </div>
         <div class="flex items-start">
           <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">Mar 2024</div>
-          <div class="flex-1 text-sm">I have been selected as the recipient of a Summer Research Grant (5,000 USD). Thanks to the Purdue Computer Science Department! 🎉</div>
+          <div class="flex-1 text-sm">I have been selected as the recipient of a Summer Research Grant (5,000 USD).
+            Thanks to the Purdue Computer Science Department! 🎉</div>
         </div>
         <div class="flex items-start">
           <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">Sep 2023</div>
@@ -184,7 +201,8 @@
         </div>
         <div class="flex items-start">
           <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">Jul 2023</div>
-          <div class="flex-1 text-sm">Our paper - MIWA: Mixed-Initiative Web Automation for Better User Control and Confidence is accepted by
+          <div class="flex-1 text-sm">Our paper - MIWA: Mixed-Initiative Web Automation for Better User Control and
+            Confidence is accepted by
             UIST
             2023 🎉.</div>
         </div>
@@ -194,7 +212,8 @@
         </div>
         <div class="flex items-start">
           <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">Jan 2022</div>
-          <div class="flex-1 text-sm">I am Graduate TA for CS 180: Problem Solving And Object-Oriented Programming.</div>
+          <div class="flex-1 text-sm">I am Graduate TA for CS 180: Problem Solving And Object-Oriented Programming.
+          </div>
         </div>
         <div class="flex items-start">
           <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">Sep 2021</div>
